<resources>
    <string name="app_name">Triviamania</string>

    //String para login
    <string name="prefs_file">user_prefs</string>
    <string name="Inicio_de_sesion">Inicia sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="btn_inicio_de_sesion">Iniciar Sesion</string>
    <string name="txt_resgistrar_cuenta">¿No tienes una cuenta? Registrate</string>


    //String para registro de cuenta
    <string name="txtv_nombre">Escribe tu nombre</string>
    <string name="txtv_correo">Escribe tu correo</string>
    <string name="txtv_contraseña">Escribe tu contraseña</string>
    <string name="Etxt_nombre">Nombre</string>
    <string name="Etxt_correo">Correo</string>
    <string name="Etxt_contraseña">Contraseña</string>
    <string name="btn_registrar_cuenta">Registrar Cuenta</string>


    //String para pantalla de inicio
    <string name="titulo_bienvenido">BIENVENIDOS A PREGUNTADOS</string>
    <string name="nivel_facil">Nivel facil</string>
    <string name="nivel_intermedio">Nivel intermedio</string>
    <string name="nivel_dificil">NIvel dificil</string>
    <string name="nivel_imposible">Nivel imposible</string>
    <string name="title_activity_pantalla_de_inicio">activity_pantalla_de_inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pantalla_de_inicio">Niveles</string>
    <string name="menu_logros">Logros</string>
    <string name="menu_datos_personales">Datos personales</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>
    <string name="Guardar_datos">Guardar datos</string>
</resources>