<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla_principal">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation2"
        android:layout_width="456dp"
        android:layout_height="894dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animacion2" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/font1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/Inicio_de_sesion"
        android:textColor="#FFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:background="@drawable/button_login"
        android:fontFamily="@font/font1"
        android:text="@string/btn_registrar_cuenta"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.198" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="366dp"
        android:layout_height="289dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.167">

        <TextView
            android:id="@+id/txtv_nombre"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:fontFamily="@font/font2"
            android:text="@string/txtv_nombre"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/Etxt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/Etxt_nombre" />

        <TextView
            android:id="@+id/txtv_correo"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:fontFamily="@font/font2"
            android:text="@string/txtv_correo"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/Etxt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/Etxt_correo"  />

        <TextView
            android:id="@+id/txtv_contraseña"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:fontFamily="@font/font2"
            android:text="@string/txtv_contraseña"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/Etxt_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/Etxt_contraseña"  />

    </LinearLayout>

    <ImageView
        android:id="@+id/button_exit"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:src="@drawable/icon_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />


</androidx.constraintlayout.widget.ConstraintLayout>