<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation2"
            android:layout_width="456dp"
            android:layout_height="894dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animacion2" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="413dp"
            android:layout_height="152dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animacion" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="313dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/font1"
            android:text="@string/titulo_bienvenido"
            android:textColor="#FFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animation"
            app:layout_constraintVertical_bias="0.078" />

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="149dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.846"
            app:layout_constraintStart_toStartOf="@+id/animation2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.243">

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_1"
                android:fontFamily="@font/font1"
                android:text="@string/nivel_facil"
                android:textColor="#FFFF" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_1"
                android:fontFamily="@font/font1"
                android:text="@string/nivel_intermedio"
                android:textColor="#FFFF" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_1"
                android:fontFamily="@font/font1"
                android:text="@string/nivel_dificil"
                android:textColor="#FFFF" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
