<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation2"
        android:layout_width="456dp"
        android:layout_height="894dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animacion2" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/font1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:text="@string/Inicio_de_sesion"
        android:textColor="#FFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="322dp"
        android:layout_height="68dp"
        android:background="@drawable/button_1"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="322dp"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_1"
        android:hint="@string/contrasena"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/button"
        android:layout_width="240dp"
        android:layout_height="64dp"
        android:background="@drawable/button_login"
        android:fontFamily="@font/font1"
        android:text="@string/btn_inicio_de_sesion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.212" />



    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="413dp"
        android:layout_height="152dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/progressbar"/>



    <TextView
        android:id="@+id/txt_registrar"
        android:layout_width="306dp"
        android:layout_height="43dp"
        android:text="@string/txt_resgistrar_cuenta"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="169dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>